--- a/package.json
+++ b/package.json
@@ -12,15 +12,16 @@
     "lint:fix": "eslint 'src/**/*.ts' --fix",
     "prettier:check": "prettier --check 'src/**/*.{ts,json}'",
     "prettier:fix": "prettier --write 'src/**/*.{ts,json}'",
-    "build": "tsc --project tsconfig.json && tsc-alias -p tsconfig.json && ts-node tools/copyAssets.ts",
-    "test": "jest --coverage=true -w=1 --forceExit --detectOpenHandles --watchAll=false"
+    "build": "tsc --project tsconfig.json && tsc-alias -p tsconfig.json",
+    "test": "jest --coverage=false -w=1 --forceExit --detectOpenHandles --watchAll=false"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@elastic/elasticsearch": "^8.11.0",
-    "@remus1504/micrograde": "^0.0.10",
+    "@faker-js/faker": "^8.4.1",
+    "@remus1504/micrograde-shared": "^0.0.5",
     "amqplib": "^0.10.3",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.41.1",
@@ -40,6 +41,7 @@
     "sequelize": "^6.35.2",
     "typescript": "^5.3.3",
     "typescript-transform-paths": "^3.4.6",
+    "unique-username-generator": "^1.3.0",
     "uuid": "^9.0.1",
     "winston": "^3.11.0"
   },
@@ -65,8 +67,9 @@
     "pino-pretty": "^10.3.1",
     "prettier": "^3.1.1",
     "ts-alias": "^0.0.7",
-    "ts-jest": "^29.1.1",
+    "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
+    "tsc-alias": "^1.8.8",
     "tsconfig-paths": "^4.2.0"
   }
 }
